--- a/sad.ipynb
+++ b/sad.ipynb
@@ -2,19 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of training examples: 208867\n",
+      "No. of testing examples: 23207\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('Suicide_Detection.csv')\n",
+    "training_data = df.sample(frac = 0.9, random_state = 25)\n",
+    "testing_data = df.drop(training_data.index)\n",
+    "\n",
+    "print(f\"No. of training examples: {training_data.shape[0]}\")\n",
+    "print(f\"No. of testing examples: {testing_data.shape[0]}\")"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 ('ssd': venv)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "88b406cf03e014e0478286c209894275353c7d3083734245df5a87589b1a6e73"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
