--- a/sad.ipynb
+++ b/sad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -26,13 +26,24 @@
     }
    ],
    "source": [
+    "#Import dataset\n",
     "df = pd.read_csv('Suicide_Detection.csv')\n",
+    "\n",
+    "#Split the data set into training and validating subsets\n",
     "training_data = df.sample(frac = 0.9, random_state = 25)\n",
     "testing_data = df.drop(training_data.index)\n",
     "\n",
+    "#Get the nunmber of entries in each subset\n",
     "print(f\"No. of training examples: {training_data.shape[0]}\")\n",
     "print(f\"No. of testing examples: {testing_data.shape[0]}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
