--- a/sad.ipynb
+++ b/sad.ipynb
@@ -2,18 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import spacy\n",
+    "import random\n",
+    "import torch\n",
+    "from torchtext import data\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x19d8bda6170>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seedness = 42\n",
+    "torch.manual_seed(seedness)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,6 +62,15 @@
     "#Get the nunmber of entries in each subset\n",
     "print(f\"No. of training examples: {training_data.shape[0]}\")\n",
     "print(f\"No. of testing examples: {testing_data.shape[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load(\"en_core_web_trf\")"
    ]
   }
  ],
